--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         h1, h2, h3 {
             color: #007bff;
         }
-        .project {
+        .project, .certification {
             background: #fff;
             margin: 1rem 0;
             padding: 1rem;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-        .project a {
+        .project a, .certification a {
             color: #007bff;
             text-decoration: none;
         }
@@ -60,12 +60,12 @@
 <body>
     <header>
         <h1>DevOps Engineer Portfolio</h1>
-        <p>Showcasing My Projects and Skills in DevOps</p>
+        <p>Showcasing My Projects, Skills, and Achievements</p>
     </header>
 
     <section class="container section">
         <h2>About Me</h2>
-        <p>Hi! I'm a DevOps Engineer passionate about building scalable systems, automating processes, and optimizing infrastructure. With expertise in CI/CD, containerization, cloud computing, and monitoring, I aim to deliver reliable and efficient solutions.</p>
+        <p>Hi! I'm Ishtiak Ferdous Shuddho, a DevOps Engineer passionate about building scalable systems, automating processes, and optimizing infrastructure. With expertise in CI/CD, containerization, cloud computing, and monitoring, I aim to deliver reliable and efficient solutions.</p>
     </section>
 
     <section class="container section">
@@ -91,6 +91,22 @@
     </section>
 
     <section class="container section">
+        <h2>Certifications</h2>
+
+        <div class="certification">
+            <h3>AWS Certified Cloud Engineer</h3>
+            <p>Certified AWS Cloud Engineer, with expertise in cloud security, infrastructure deployment, and capacity planning.</p>
+            <a href="https://example.com/certification" target="_blank">View Certificate</a>
+        </div>
+
+        <div class="certification">
+            <h3>Certificate of Academic Excellence</h3>
+            <p>Awarded for outstanding academic achievement in Summer 2024, achieving a GPA of 3.5 or higher at Washington University of Science and Technology.</p>
+            <a href="/mnt/data/Screenshot%202024-11-08%20192053.jpg" target="_blank">View Certificate</a>
+        </div>
+    </section>
+
+    <section class="container section">
         <h2>Skills</h2>
         <ul>
             <li>Continuous Integration/Continuous Deployment (CI/CD)</li>
@@ -98,20 +114,29 @@
             <li>Containerization: Docker, Kubernetes</li>
             <li>Infrastructure as Code: Terraform, Ansible</li>
             <li>Monitoring: Prometheus, Grafana</li>
+            <li>Programming: Python, PHP, C, C++</li>
+            <li>Version Control Systems: Git</li>
         </ul>
+    </section>
+
+    <section class="container section">
+        <h2>Education</h2>
+        <p><strong>Bachelor of Science in Software Engineering</strong><br>Washington University of Science and Technology - Expected Dec 2026</p>
+        <p><strong>HSC (Board Exam 12th):</strong> Dhaka Residential Model College, Apr 2019</p>
+        <p><strong>SSC (Board Exam 10th):</strong> Dhaka Residential Model College, Feb 2017</p>
     </section>
 
     <section class="container section">
         <h2>Contact Me</h2>
         <div class="contact-icons">
-            <a href="mailto:your.email@example.com" target="_blank"><i class="fas fa-envelope"></i></a>
-            <a href="https://linkedin.com/in/your-profile" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:ishtiakferdous11555@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+            <a href="https://linkedin.com/in/ishtiak-ferdous-27b45121a" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/your-profile" target="_blank"><i class="fab fa-github"></i></a>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 DevOps Engineer Portfolio</p>
+        <p>&copy; 2024 Ishtiak Ferdous Shuddho | DevOps Engineer Portfolio</p>
     </footer>
 </body>
 </html>
