--- a/index.html
+++ b/index.html
@@ -7,18 +7,30 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
             line-height: 1.6;
-            background-color: #f4f4f4;
+            background-color: #f8f9fa;
             color: #333;
         }
         header {
-            background: #007bff;
+            background: linear-gradient(135deg, #004080, #0077b6);
             color: #fff;
-            padding: 1rem 0;
+            padding: 2rem 0;
             text-align: center;
+            position: relative;
+        }
+        header img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 4px solid #fff;
+            margin-top: -75px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            background-color: #fff;
         }
         .container {
             max-width: 1100px;
@@ -30,37 +42,59 @@
             padding: 2rem 0;
         }
         h1, h2, h3 {
-            color: #007bff;
+            color: #0077b6;
         }
         .project, .certification {
             background: #fff;
             margin: 1rem 0;
-            padding: 1rem;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            padding: 1.5rem;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease-in-out;
+        }
+        .project:hover, .certification:hover {
+            transform: translateY(-5px);
         }
         .project a, .certification a {
-            color: #007bff;
+            color: #0077b6;
             text-decoration: none;
+            font-weight: bold;
         }
         footer {
             text-align: center;
             padding: 1rem 0;
-            background: #333;
+            background: #004080;
             color: #fff;
+            margin-top: 2rem;
         }
         .contact-icons a {
-            color: #007bff;
+            color: #0077b6;
             margin: 0 10px;
             text-decoration: none;
             font-size: 1.5rem;
+        }
+        .contact-icons a:hover {
+            color: #0056b3;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li::before {
+            content: '\2022';
+            color: #0077b6;
+            font-weight: bold;
+            display: inline-block; 
+            width: 1em;
+            margin-left: -1em;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>DevOps Engineer Portfolio</h1>
-        <p>Showcasing My Projects, Skills, and Achievements</p>
+        <img src="https://via.placeholder.com/150" alt="Profile Picture">
+        <h1>Ishtiak Ferdous Shuddho</h1>
+        <p>DevOps Engineer | Cloud Enthusiast | Software Innovator</p>
     </header>
 
     <section class="container section">
